Add internalTestWithHollow (#3753)
Variation for integration tests with super thin shards enabled.

Closes ES-11513